# serpent_mail

./: .aider.conf.yml  .gitignore  Dockerfile  docker-compose.yaml  main.py  manage.py  pyproject.toml  pyrightconfig.json
curation/: admin.py  models.py
curation/migrations/: 0001_initial.py  0002_article_reading_time_minutes.py  0003_article_summary_ko.py  0004_alter_article_reading_time_minutes.py  0005_category.py  0006_article_categories.py
serpent_mail/: asgi.py  settings.py  urls.py  wsgi.py
serpent_mail/settings/: base.py  development.py
