[project]
name = "serpent-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.0,<0.4.0",
    "lxml>=5.3.2",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "ruff>=0.11.5",
    "ruff-lsp>=0.0.62",
]
